Site header no longer inline, but reduced spacing before navigation links.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,7 +6,7 @@ main {
 }
 .site-header {
     .site-title {
-        display: inline;
+        margin-bottom: 2px;
         font-weight: 300;
         > a {
             color: $text-color;
